# bertrand

./: .gitignore  LICENSE  README.ja.md  README.md  bertrand.cabal  spec.md  stack.yaml
app/: Main.hs
documents/: note.txt
src/: Bertrand.hs  Parser.hs
src/Bertrand/: Data.hs  Interpreter.hs  Lexer.hs  Parser.hs  Preprocessor.hs  REPL.hs  Shell.hs  System.hs
